--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.findActivity"
-            android:exported="true">
+            android:exported="false">
 <!--             <intent-filter>-->
 <!--             <action android:name="android.intent.action.MAIN" />-->
 <!--             <category android:name="android.intent.category.LAUNCHER" />-->
@@ -31,23 +31,20 @@
         <activity
             android:name=".activity.CareerfieldActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-                        <meta-data
-                            android:name="android.app.lib_name"
-                            android:value="" />
-                    </activity>
-                    <activity
-                        android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-                        android:theme="@style/Base.Theme.AppCompat" />
-                    <activity
-                        android:name=".activity.MainActivity"
-                        android:exported="false">
-            <!--             <intent-filter>-->
-<!--             <action android:name="android.intent.action.MAIN" />-->
-<!--             <category android:name="android.intent.category.LAUNCHER" />-->
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
+            <activity
+                android:name=".activity.MainActivity"
+                android:exported="false">
+<!--                <intent-filter>-->
+<!--                 <action android:name="android.intent.action.MAIN" />-->
+<!--                 <category android:name="android.intent.category.LAUNCHER" />-->
 <!--             </intent-filter>-->
             <meta-data
                 android:name="android.app.lib_name"
@@ -83,8 +80,12 @@
         </activity>
         <activity
             android:name=".activity.JobseakercolletionActivity"
-            android:exported="false"
+            android:exported="true"
             android:windowSoftInputMode="adjustPan">
+                            <intent-filter>
+                             <action android:name="android.intent.action.MAIN" />
+                             <category android:name="android.intent.category.LAUNCHER" />
+                         </intent-filter>
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
