--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,17 @@
         android:theme="@style/Theme.GoJob"
         tools:targetApi="31">
         <activity
+            android:name=".activity.CompanycolletionActivity"
+            android:exported="true">
+                         <intent-filter>
+                         <action android:name="android.intent.action.MAIN" />
+                         <category android:name="android.intent.category.LAUNCHER" />
+                         </intent-filter>
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".activity.findActivity"
             android:exported="false">
 <!--             <intent-filter>-->
@@ -66,13 +77,6 @@
         </activity>
         <activity
             android:name=".activity.SignupActivity2"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".activity.CompanycollectionActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
