--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,17 @@
         android:theme="@style/Theme.GoJob"
         tools:targetApi="31">
         <activity
+            android:name=".activity.jobCreate"
+            android:exported="false" />
+        <activity
             android:name=".activity.CompanycolletionActivity"
             android:exported="true">
-                         <intent-filter>
-                         <action android:name="android.intent.action.MAIN" />
-                         <category android:name="android.intent.category.LAUNCHER" />
-                         </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -31,10 +36,11 @@
         <activity
             android:name=".activity.findActivity"
             android:exported="false">
-<!--             <intent-filter>-->
-<!--             <action android:name="android.intent.action.MAIN" />-->
-<!--             <category android:name="android.intent.category.LAUNCHER" />-->
-<!--             </intent-filter>-->
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -42,7 +48,6 @@
         <activity
             android:name=".activity.CareerfieldActivity"
             android:exported="true">
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -50,13 +55,14 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-            <activity
-                android:name=".activity.MainActivity"
-                android:exported="false">
-<!--                <intent-filter>-->
-<!--                 <action android:name="android.intent.action.MAIN" />-->
-<!--                 <category android:name="android.intent.category.LAUNCHER" />-->
-<!--             </intent-filter>-->
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="false">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -86,10 +92,12 @@
             android:name=".activity.JobseakercolletionActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustPan">
-                            <intent-filter>
-                             <action android:name="android.intent.action.MAIN" />
-                             <category android:name="android.intent.category.LAUNCHER" />
-                         </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
