--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.GoJob"
         tools:targetApi="31">
         <activity
+            android:name=".activity.jobListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.CompanyActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.companyRequestActivity"
             android:exported="false" />
         <activity
@@ -24,6 +30,10 @@
         <activity
             android:name=".activity.splashScreen"
             android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
