--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.GoJob"
         tools:targetApi="31">
         <activity
+            android:name=".activity.viewJobSeekerInformationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.jobSeekerListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.viewJobSeekerActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.JobManageActivity"
             android:exported="false" />
         <activity
